--- a/AnimalAdoption.Web.Portal/Pages/Shared/_Layout.cshtml
+++ b/AnimalAdoption.Web.Portal/Pages/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Cart">Cart</a>
+                            <a class="nav-link text-dark" asp-route-id="1" asp-area="" asp-page="/Owners">Owner Information</a>
                         </li>
                     </ul>
                 </div>
